// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 12.72824377016166,
              "flexDirection": "row",
              "height": 41.189469109428465,
              "justifyContent": "center",
              "width": 41.189469109428465,
            },
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#555",
              "borderWidth": 1.1477226122778774,
              "elevation": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#555",
                "display": "flex",
                "fontSize": 20.594734554714233,
              }
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "bottom": 7.866490784552572,
                "color": "#555",
                "display": "flex",
                "fontSize": 12.72824377016166,
                "left": 7.866490784552572,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 12.72824377016166,
              "flexDirection": "row",
              "height": 41.189469109428465,
              "justifyContent": "center",
              "width": 41.189469109428465,
            },
            Object {
              "backgroundColor": "#323031",
              "borderColor": "black",
              "borderWidth": 1.1477226122778774,
              "elevation": 1.8570151866656057,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#fefefe",
                "display": "flex",
                "fontSize": 20.594734554714233,
              }
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "bottom": 7.866490784552572,
                "color": "#fefefe",
                "display": "flex",
                "fontSize": 12.72824377016166,
                "left": 7.866490784552572,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessible={false}
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 12.72824377016166,
        "flexDirection": "row",
        "height": 41.189469109428465,
        "justifyContent": "center",
        "width": 41.189469109428465,
      }
    }
  />
</View>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 12.72824377016166,
              "flexDirection": "row",
              "height": 41.189469109428465,
              "justifyContent": "center",
              "width": 41.189469109428465,
            },
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#555",
              "borderWidth": 1.1477226122778774,
              "elevation": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#555",
                "display": "flex",
                "fontSize": 20.594734554714233,
              }
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "bottom": 7.866490784552572,
                "color": "#555",
                "display": "flex",
                "fontSize": 12.72824377016166,
                "left": 7.866490784552572,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "scale": undefined,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 12.72824377016166,
              "flexDirection": "row",
              "height": 41.189469109428465,
              "justifyContent": "center",
              "width": 41.189469109428465,
            },
            Object {
              "backgroundColor": "#fefefe",
              "borderColor": "#555",
              "borderWidth": 1.1477226122778774,
              "elevation": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#555",
                "display": "none",
                "fontSize": 20.594734554714233,
              }
            }
          >
            2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "bottom": 7.866490784552572,
                "color": "#555",
                "display": "none",
                "fontSize": 12.72824377016166,
                "left": 7.866490784552572,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
